fix: preloader z-index

--- a/static/css/preloader.css
+++ b/static/css/preloader.css
@@ -8,7 +8,7 @@
   margin-left: -50px;
   left: 50%;
   animation: speeder 0.4s linear infinite;
-  z-index: 100;
+  z-index: 1000;
 }
 .body > span {
   height: 5px;
@@ -169,7 +169,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  z-index: 99;
+  z-index: 999;
   background-color: #ffffff;
   overflow: hidden;
 }
